# SecOPS.v1

./: .env  .env.example  .gitignore  COMPONENT_CATALOG.md  FEATURES_SERVICES.md  GOVERNANCE_BINDER.md  LICENSE  LLM_MODEL.md  MARKETING_POSITIONING.md  README.md  README_TUNNEL.md  TSMv1.0.1.md  bridge_logic.py  debug_main_import.py  docker-compose.prod.yml  docker-compose.yml  frontend_log.txt  go_live.sh  npm_install_framer.txt  npm_install_log.txt  requirements.txt  sanity_check.py  sanity_check_bridge.py  setup_tunnel.sh  test_autonomy.sh
backend/: .env.example  Dockerfile  alembic.ini  config.yaml  pyproject.toml  requirements.txt
backend/$dir/: __init__.py
backend/data/: model_registry.json  tpm_sim_key  trace_ledger.jsonl
backend/data/inference/: config.json
backend/data/models/: keyword_config.json  model_config.json
backend/data/workflow_corpus/: README.md  execute_workflow.py
backend/scripts/: generate_keys.py
backend/src/: __init__.py  app.py  main.py
backend/src/agent/: __init__.py  agent.py  auto_fix.py  collectors.py  heartbeat.py  installer.sh
backend/src/api/: __init__.py  deps.py
backend/src/core/: __init__.py
backend/src/db/: __init__.py  base.py  models.py  session.py
backend/src/extensions/: __init__.py  agent0_adapter.py  evolution_eng.py  feature_store.py  (+2 more)
backend/tests/: conftest.py  test_admin_routes.py  test_api_rag.py  test_axiom_synthesizer.py  test_checks.py  test_data_resident.py  test_deployment_readiness.py  test_evolution_optimizers.py  test_feedback_loop.py  test_fine_tune_llama_models.py  test_integration.py  test_integrations_mock.py  test_learning_system.py  test_llm_infrastructure.py  test_platform.py  test_rag.py  test_swarm_manual.py
(+554 files in other folders)
